IndexCatalogImpl::numIndexesTotal cannot assume all indexes are visible

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2020-10-19
    • 40
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      With the removal of the collection minimumVisibleSnapshot setting for index builds, certain assumptions about the index catalog can no longer be guaranteed when using AutoGetCollectionForRead.

      When createIndexes determines whether an existing index already exists under a collection IX lock, it calls numIndexesTotal. In debug builds, this asserts that all indexes are visible in the current snapshot, which is no longer guaranteed by AutoGetCollectionForRead.

      I think we should just remove the assertion in numIndexesTotal, since it's hard to enforce.

            Assignee:
            Louis Williams
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: