SERVER-51192 IndexCatalog::numIndexesTotal and numIndexesReady should not assert that all indexes are visible